--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,13 @@
+{% extends "blog/base.html" %}
 
-<html>
-    <head>
-        <title>Django Girls cognosCELA</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">cognosCELA Blog</a></h1>
-        </div>
-
-        <div>
-          {% for post in posts %}
-            <div>
-              <p>published: {{ post.published_date }}</p>
-              <h1><a href="">{{ post.title }}</a></h1>
-              <p>{{ post.text|linebreaks }}</p>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
             </div>
-          {% endfor %}
+            <h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
         </div>
-    </body>
-</html>
+    {% endfor %}
+{% endblock content %}
